--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.9.0",
     "recoil": "^0.7.7",
+    "safe-json-stringify": "^1.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/safe-json-stringify": "^1.1.2"
   }
 }
